--- a/MaReu/app/src/main/res/drawable/spinner.xml
+++ b/MaReu/app/src/main/res/drawable/spinner.xml
@@ -1,5 +1,35 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M7.41,7.84L12,12.42l4.59,-4.58L18,9.25l-6,6 -6,-6z"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item>
+        <layer-list>
+            <item>
+                <shape
+                    android:shape="rectangle">
+
+                    <solid
+                        android:color="@android:color/transparent"/>
+
+                    <stroke
+                        android:color="@color/colorAccent"
+                        android:width="1dp"/>
+
+                    <corners
+                        android:radius="20dp"/>
+
+                </shape>
+
+            </item>
+
+            <item
+                android:drawable="@drawable/ic_keyboard_arrow_down_white_24dp"
+                android:gravity="center_vertical|right"
+                android:right="5dp"/>
+
+        </layer-list>
+
+    </item>
+
+</selector>
