--- a/MaReu/app/src/main/res/layout/item_reunion.xml
+++ b/MaReu/app/src/main/res/layout/item_reunion.xml
@@ -9,8 +9,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <View
             android:id="@+id/color_salle"
@@ -18,8 +17,8 @@
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:padding="20dp"
             android:background="@drawable/corner_radius"
+            android:padding="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_editor_absoluteX="12dp" />
